tests/testWorkflows/invalid_workflows/invalidAppWorkflow.playbook
{
    "name": "invalidAppWorkflow",
    "workflows": [
        {
            "actions": [
                {
                    "action_name": "helloWorld",
                    "app_name": "HelloWorldBounded",
                    "arguments": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "device_id": 1,
                    "id": "aee0c4f0-6284-4e4a-a951-b0782876e852",
                    "name": "1"
                },
                {
                    "action_name": "helloWorld",
                    "app_name": "Invalid",
                    "arguments": [],
                    "device_id": 1,
                    "id": "7b8598de-5bc9-46f2-bb4f-e7d915052063",
                    "name": "start"
                }
            ],
            "branches": [
                {
                    "destination_id": "aee0c4f0-6284-4e4a-a951-b0782876e852",
                    "source_id": "7b8598de-5bc9-46f2-bb4f-e7d915052063",
                    "status": "Success"
                }
            ],
            "name": "multiactionWorkflow",
            "start": "7b8598de-5bc9-46f2-bb4f-e7d915052063"
        }
    ]
}